// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Node.svelte > should render node 1`] = `
<div>
  <node
    aria-expanded="false"
    aria-selected="false"
    class="node min-h-5 flex flex-col cursor-pointer select-none"
    data-path=""
    id="id-"
    role="treeitem"
  >
    <div
      class="flex flex-row items-center"
    >
       
      <item>
        
         
        <p>
          Alpha
        </p>
        
      </item>
    </div>
     
  </node>
</div>
`;

exports[`Node.svelte > should render node in rtl 1`] = `
<div>
  <node
    aria-expanded="false"
    aria-selected="false"
    class="node min-h-5 flex flex-col cursor-pointer select-none flex-row-reverse"
    data-path=""
    id="id-"
    role="treeitem"
  >
    <div
      class="flex flex-row items-center"
    >
       
      <item>
        
         
        <p>
          An RTL Node
        </p>
        
      </item>
    </div>
     
  </node>
</div>
`;

exports[`Node.svelte > should render node sibling node 1`] = `
<div>
  <node
    aria-expanded="false"
    aria-selected="false"
    class="node min-h-5 flex flex-col cursor-pointer select-none"
    data-path=""
    id="id-"
    role="treeitem"
  >
    <div
      class="flex flex-row items-center"
    >
       
      <item>
        
         
        <p>
          Sibling Node
        </p>
        
      </item>
    </div>
     
  </node>
</div>
`;

exports[`Node.svelte > should render node when path changes 1`] = `
<div>
  <node
    aria-expanded="false"
    aria-selected="false"
    class="node min-h-5 flex flex-col cursor-pointer select-none"
    data-path="0"
    id="id-0"
    role="treeitem"
  >
    <div
      class="flex flex-row items-center"
    >
       
      <item>
        
         
        <p>
          A Node
        </p>
        
      </item>
    </div>
     
  </node>
</div>
`;

exports[`Node.svelte > should render node when path changes 2`] = `
<div>
  <node
    aria-expanded="false"
    aria-selected="false"
    class="node min-h-5 flex flex-col cursor-pointer select-none"
    data-path="1"
    id="id-1"
    role="treeitem"
  >
    <div
      class="flex flex-row items-center"
    >
       
      <item>
        
         
        <p>
          A Node
        </p>
        
      </item>
    </div>
     
  </node>
</div>
`;

exports[`Node.svelte > should render node when selected 1`] = `
<div>
  <node
    aria-expanded="false"
    aria-selected="true"
    class="node min-h-5 flex flex-col cursor-pointer select-none"
    data-path=""
    id="id-"
    role="treeitem"
  >
    <div
      class="flex flex-row items-center"
    >
       
      <item>
        
         
        <p>
          A Selected Node
        </p>
        
      </item>
    </div>
     
  </node>
</div>
`;

exports[`Node.svelte > should render node with collapsed icon 1`] = `
<div>
  <node
    aria-expanded="false"
    aria-selected="false"
    class="node min-h-5 flex flex-col cursor-pointer select-none"
    data-path=""
    id="id-"
    role="treeitem"
  >
    <div
      class="flex flex-row items-center"
    >
       
      <item>
        
         
        <p>
          Collapsed Node
        </p>
        
      </item>
    </div>
     
  </node>
</div>
`;

exports[`Node.svelte > should render node with expanded icon 1`] = `
<div>
  <node
    aria-expanded="true"
    aria-selected="false"
    class="node min-h-5 flex flex-col cursor-pointer select-none"
    data-path=""
    id="id-"
    role="treeitem"
  >
    <div
      class="flex flex-row items-center"
    >
       
      <item>
        
         
        <p>
          Expanded Node
        </p>
        
      </item>
    </div>
     
  </node>
</div>
`;

exports[`Node.svelte > should render node with path 1`] = `
<div>
  <node
    aria-expanded="false"
    aria-selected="false"
    class="node min-h-5 flex flex-col cursor-pointer select-none"
    data-path="0"
    id="id-0"
    role="treeitem"
  >
    <div
      class="flex flex-row items-center"
    >
       
      <item>
        
         
        <p>
          Example
        </p>
        
      </item>
    </div>
     
  </node>
</div>
`;
